
[package]
name = "tera-derive"
version = "1.0.0"
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Template engine based on Jinja2/Django templates"
homepage = "https://tera.netlify.com/"
repository = "https://github.com/Keats/tera"
keywords = ["template", "html", "django", "markup", "jinja2"]
categories = ["template-engine"]
include = ["/src/**/*", "/LICENSE", "/README.md", "/CHANGELOG.md"]


[lib]
name = "tera_derive"
proc-macro = true

[dependencies]
bae = "0.1.7"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
fnv = "1"
proc-macro2 = "1.0"